cluster/apps/paperless/paperless-ngx/ingress-authentik.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: authentik-outpost
  namespace: default
spec:
  type: ExternalName
  externalName: authentik.authentik.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  annotations:
    kubernetes.io/ingress.class: nginx
    hajimari.io/enable: "false"
  namespace: default
spec:
  rules:
    - host: "paperless.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik.authentik.svc.cluster.local
                port:
                  number: 80
